Update of website

--- a/_posts/2017-01-31-about.md
+++ b/_posts/2017-01-31-about.md
@@ -17,17 +17,24 @@ translation to how far a bird can fly without stopping to how amphibians arrive
 on oceanic islands. This is followed by the use of statistical mechanics to
 explore problems in regulatory biology. Some examples include the physics of
 post-translational modifications, how cells make transcriptional decisions and
-the precision with which embryonic development takes place. From there, we turn
-to the biophysics of membranes and how order is maintained in the context of
-two-dimensional arrangements of lipids and proteins. The final topic explores
-ideas from evolution, population genetics and information theory in order to get a sense of the transmission of biological information. In addition to these
-topics, the course also involves an intensive hands-on project using Python to
-do image segmentation in order to find the fluorescence of individual cells and
-to use this fluorescence to compare to statistical mechanical models of gene
-regulation.
+the precision with which embryonic development takes place. In addition to these topics, the course also involves a series of hands-on projects using Python to amplify the case studies discussed in class.
 
 
 ## Where and When? 
 
-The course will take place in XXX from 4 November through 10
+The course will take place from 5 November through 10
 November. 
+
+## Syllabus
+
+| Date | Topics | 
+| :--: | :--: |
+| 5 Nov. | A feeling for the numbers in biology | 
+| | Diffusion: Biology's null hypothesis for molecular motion| 
+| 6 Nov. | Diffusion continued: Spread the butter| 
+| | Dimensionless parameters and order of magnitude thinking |
+| 7 Nov. | The great probability distributions and the rule of right thinking |
+| 8 Nov. | Statistical mechanics and other super powers | 
+| 9 Nov. | Successes and failures in physical biology |   
+
+
