--- a/_posts/2017-01-25-code.md
+++ b/_posts/2017-01-25-code.md
@@ -19,14 +19,14 @@ progresses, these materials will be posted below. **Note:** *In some browsers (F
 
 
 ## Data sets
-Please download the following data sets, unzip them, and place them in your `bootcamp/data` folder as described in [the setting up Python tutorial]({{ site.baseurl}}/code/t0a_setting_up_python.html).
+Please download the following data sets, unzip them, and place them in your `cbbtn/data` folder as described in [the setting up Python tutorial]({{ site.baseurl}}/code/t0a_setting_up_python.html).
 x
 
 
 ## Python utilities
 As sometimes syntax can be difficult, we have written a file with a few functions written in Python that will make some of the in-class exercises less cumbersome. Please download them below and place them in your root `pboc` folder.
 
-* [cbn_utilities.py]({{ site.baseurl}}/code/pboc_utilities.py) \| Course utilities.
+* [cbbtn_utilities.py]({{ site.baseurl}}/code/cbbtn_utilities.py) \| Course utilities.
 
 
 
