--- a/_posts/2017-01-25-code.md
+++ b/_posts/2017-01-25-code.md
@@ -10,9 +10,9 @@ permalink: programming
 We will have several computational tutorials throughout the course. As the course
 progresses, these materials will be posted below. **Note:** *In some browsers (Firefox primarily), the end of each sentence is clipped off, making it difficult to read. If this is occurring, please try using another browser (Chrome, Safari, etc).*
 
-* [Tutorial 0a: Configuring your computer]({{ site.baseurl}}/code/t0a_setting_up_python.html) \| This tutorial will walk you through how to install a Python 3.6 scientific computing environment.
+* [Tutorial 0a: Configuring your computer]({{ site.baseurl}}/code/t0a_setting_up_python.html) \| This tutorial will walk you through how to install a Python 3.7 scientific computing environment.
 
-* [Tutorial 0b: Using the Jupyter notebook]({{ site.baseurl}}/code/t0b_jupyter_notebooks.html) \| This tutorial will teach you how to write code and text in Jupyter notebooks for homework submissions.
+* [Tutorial 0b: Using the Jupyter notebook]({{ site.baseurl}}/code/t0b_jupyter_notebooks.html) \| This tutorial will teach you how to write code and text in Jupyter notebooks.
 
 * [Tutorial 0c: A Primer on Python Syntax]({{ site.baseurl}}/code/t0c_python_syntax_and_plotting.html) \| This tutorial will walk you through the basics of programming in Python.
 
