Updated the syllabus

--- a/_posts/2017-01-31-about.md
+++ b/_posts/2017-01-31-about.md
@@ -29,12 +29,15 @@ November.
 
 | Date | Topics | 
 | :--: | :--: |
-| 5 Nov. | A feeling for the numbers in biology | 
-| | Diffusion: Biology's null hypothesis for molecular motion| 
-| 6 Nov. | Diffusion continued: Spread the butter| 
-| | Dimensionless parameters and order of magnitude thinking |
-| 7 Nov. | The great probability distributions and the rule of right thinking |
-| 8 Nov. | Statistical mechanics and other superpowers | 
-| 9 Nov. | Successes and failures in physical biology |   
+| 5 Nov. | **A feeling for the organism.**|
+| | We will test our biological intuition and use the principles of "street-fighting mathematics" to make testable estimates about biological phenomena.|
+| 6 Nov. | **Diffusive dynamics and explorations in probability.**|
+| | Diffusion is biology's null model of molecular motion. We will explore the dynamics and consequences of diffusion through a mathematical lens and it's deep connection to probability|
+| 7 Nov. | **Equilibrium and Disequilibrium: Life as an Elephant.**|
+| | We will think of a variety of biological processes as input-output functions. From ion channels to transcription factors, thermodynamics and statistical mechanics can be used to understand cellular physiology.|
+| 8 Nov. | **Equilibrium and Disequilibrium Continued.**| 
+|| We will continue our discussion of equilibrium models in biology and emphasize the utility of flux and balance laws.|
+| 9 Nov. | **A vision for biology**|   
+| | Probability is the language of biology. We'll talk about who they are and how to use them. We'll wrap up the course with a celebration of quantitative biology by examining success stories.|
 
 
