Updated website for paper and data set

--- a/_posts/2017-01-25-code.md
+++ b/_posts/2017-01-25-code.md
@@ -20,7 +20,8 @@ progresses, these materials will be posted below. **Note:** *In some browsers (F
 
 ## Data sets
 Please download the following data sets, unzip them, and place them in your `cbbtn/data` folder as described in [the setting up Python tutorial]({{ site.baseurl}}/code/t0a_setting_up_python.html).
-x
+
+* [Images of a growing *E. coli* microcolony](http://www.rpdata.caltech.edu/courses/course_data/ecoli_growth.zip)
 
 
 ## Python utilities
