Added tutorials for day 1

--- a/_posts/2017-01-24-readings.md
+++ b/_posts/2017-01-24-readings.md
@@ -12,10 +12,7 @@ Readings mentioned specifically in class will be listed here as the course progr
 
 {% assign readings = site.data.papers %}
 
-{% for week in readings %}
-<span style="display: block; font-weight: 500"> <b>{{ week[0] }}</b></span>
-
-{% for p in week[1] %}
+{% for p in readings %}
 {% assign dir = "http://rpdata.caltech.edu/courses/course_papers/protected/" %}
 {% if p.link != None %}
 {% assign dir = p.link %}
@@ -26,4 +23,4 @@ Readings mentioned specifically in class will be listed here as the course progr
 {{p.title}} by {{ p.author }} *{{ p.journal }}* {{ p.volume }}{{ p.number }} {{ p.year }}. {{ p.description }}
 {% endif %}
 {% endfor %}
-{% endfor %}
+
