--- a/_posts/2017-01-25-code.md
+++ b/_posts/2017-01-25-code.md
@@ -35,8 +35,9 @@ As sometimes syntax can be difficult, we have written a file with a few function
 As we progress through the course, the code written in class will be posted here, along with the polished version of the same material.
 
 
-* **Tutorial 1A** | [Numerical Integration of Biological Growth]({{site.baseurl}}/code/t1a_numerical_integration.html)
-* **Tutorial 1B** | [Measuring Bacterial Growth Via Microscopy]({{site.baseurl}}/code/t1b_ecoli_growth.html)
+* **Tutorial 1** | [Numerical Integration of Biological Growth]({{site.baseurl}}/code/t1a_numerical_integration.html)
+* **Tutorial 2** | [Measuring Bacterial Growth Via Microscopy]({{site.baseurl}}/code/t1b_ecoli_growth.html)
+* **Tutorial 3** | [Writing Stochastic Simulations]({{site.baseurl}}/code/t03_stochastic_simulations.html)
 
 
 
