Fixed a formatting issue

--- a/code/t04_chemical_master_equations.ipynb
+++ b/code/t04_chemical_master_equations.ipynb
@@ -37,7 +37,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Another View of Diffusion: The Chemical Master Equation\n",
+    "## Another View of Diffusion: The Chemical Master Equation\n",
     "\n",
     "As we have seen over and over again, diffusion is a central concept in our understanding of how life operates. The principles of diffusion can shed light on how molecules travel within cells and organisms, to herd migration, to changing of allele frequencies over time. In this course, we've examined the case of a one-dimensional random walk and its connection to diffusion in an earlier tutorial where we performed repeated trials of coin flips to get a picture of the probability distribution of position as a function of time.\n",
     "\n",
