--- a/_posts/2017-01-25-code.md
+++ b/_posts/2017-01-25-code.md
@@ -39,7 +39,7 @@ As we progress through the course, the code written in class will be posted here
 * **Tutorial 2** \| [Measuring Bacterial Growth Via Microscopy]({{site.baseurl}}/code/t1b_ecoli_growth.html)
 * **Tutorial 3** \| [Writing Stochastic Simulations]({{site.baseurl}}/code/t03_stochastic_simulations.html)
 * **Tutorial 4** \| [Integrating Chemical Master Equations]({{site.baseurl}}/code/t04_chemical_master_equations.html)
-
+* **Tutorial 5** \| [Constitutive Expression and the Poisson Distribution]({{site.baseurl}}/code/t05_constitutive_expression.html)
 
 
 ## External resources
