Added gillespie tutorial

--- a/_posts/2017-01-25-code.md
+++ b/_posts/2017-01-25-code.md
@@ -40,6 +40,7 @@ As we progress through the course, the code written in class will be posted here
 * **Tutorial 3** \| [Writing Stochastic Simulations]({{site.baseurl}}/code/t03_stochastic_simulations.html)
 * **Tutorial 4** \| [Integrating Chemical Master Equations]({{site.baseurl}}/code/t04_chemical_master_equations.html)
 * **Tutorial 5** \| [Constitutive Expression and the Poisson Distribution]({{site.baseurl}}/code/t05_constitutive_expression.html)
+* **Tutorial 6** \| [Gillespie Stochastic Simulation of Constitutive Expression]({{site.baseurl}}/code/t06_gillespie_algorithm.html)
 
 
 ## External resources
