Added link to survey

--- a/_posts/2017-01-31-about.md
+++ b/_posts/2017-01-31-about.md
@@ -40,4 +40,7 @@ November.
 | 9 Nov. | **A vision for biology**|   
 | | Probability is the language of biology. We'll talk about who they are and how to use them. We'll wrap up the course with a celebration of quantitative biology by examining success stories.|
 
+## Survey  
+Thanks to all of you for taking the course! We ask that you kindly fill out this survey so we can continue to improve the course. 
 
+* [CENTURI Workshop Course Survey](https://docs.google.com/forms/d/e/1FAIpQLSc77JtTd0nEH5vgmg0jhuIKsfJa2dSvw3BkmCT7LxHfQwyy2w/viewform?vc=0&c=0&w=1)
