first modifications of website under my control

--- a/_posts/2017-01-31-about.md
+++ b/_posts/2017-01-31-about.md
@@ -17,30 +17,27 @@ translation to how far a bird can fly without stopping to how amphibians arrive
 on oceanic islands. This is followed by the use of statistical mechanics to
 explore problems in regulatory biology. Some examples include the physics of
 post-translational modifications, how cells make transcriptional decisions and
-the precision with which embryonic development takes place. In addition to these topics, the course also involves a series of hands-on projects using Python to amplify the case studies discussed in class.
+the precision with which embryonic development takes place. In addition to these
+topics, the course also involves a series of hands-on projects using Python to
+amplify the case studies discussed in class.
 
 
-## Where and When? 
+## Where and When?
 
-The course will take place from 5 November through 10
-November. 
+The course will take place from 14 January through 18
+January 2019.
 
 ## Syllabus
 
-| Date | Topics | 
+| Date | Topics |
 | :--: | :--|
-| 5 Nov. | **A feeling for the organism.**|
+| 14 Jan. | **A feeling for the organism.**|
 | | We will test our biological intuition and use the principles of "street-fighting mathematics" to make testable estimates about biological phenomena.|
-| 6 Nov. | **Diffusive dynamics and explorations in probability.**|
+| 15 Jan. | **Diffusive dynamics and explorations in probability.**|
 | | Diffusion is biology's null model of molecular motion. We will explore the dynamics and consequences of diffusion through a mathematical lens and it's deep connection to probability|
-| 7 Nov. | **Equilibrium and Disequilibrium: Life as an Elephant.**|
+| 16 Jan. | **Equilibrium and Disequilibrium: Life as an Elephant.**|
 | | We will think of a variety of biological processes as input-output functions. From ion channels to transcription factors, thermodynamics and statistical mechanics can be used to understand cellular physiology.|
-| 8 Nov. | **Equilibrium and Disequilibrium Continued.**| 
+| 17 Jan. | **Equilibrium and Disequilibrium Continued.**|
 || We will continue our discussion of equilibrium models in biology and emphasize the utility of flux and balance laws.|
-| 9 Nov. | **A vision for biology**|   
+| 18 Jan. | **A vision for biology**|   
 | | Probability is the language of biology. We'll talk about who they are and how to use them. We'll wrap up the course with a celebration of quantitative biology by examining success stories.|
-
-## Survey  
-Thanks to all of you for taking the course! We ask that you kindly fill out this survey so we can continue to improve the course. 
-
-* [CENTURI Workshop Course Survey](https://docs.google.com/forms/d/e/1FAIpQLSc77JtTd0nEH5vgmg0jhuIKsfJa2dSvw3BkmCT7LxHfQwyy2w/viewform?vc=0&c=0&w=1)
