further changes to get website in shape

--- a/_posts/2017-01-31-about.md
+++ b/_posts/2017-01-31-about.md
@@ -5,7 +5,7 @@ cover: about_blank.png
 categories: posts
 permalink: about
 ---
-# Cell Biology by the Numbers at IBDM
+# Physical Biology of the Cell @ NCBS
 
 ## About
 
