update the syllabus

--- a/_posts/2017-01-31-about.md
+++ b/_posts/2017-01-31-about.md
@@ -35,9 +35,9 @@ January 2019.
 | | We will test our biological intuition and use the principles of "street-fighting mathematics" to make testable estimates about biological phenomena.|
 | 15 Jan. | **Diffusive dynamics and explorations in probability.**|
 | | Diffusion is biology's null model of molecular motion. We will explore the dynamics and consequences of diffusion through a mathematical lens and it's deep connection to probability|
-| 16 Jan. | **Equilibrium and Disequilibrium: Life as an Elephant.**|
+| 16 Jan. | **Life as an Elephant - our next adventure in probabilistic biology.**|
 | | We will think of a variety of biological processes as input-output functions. From ion channels to transcription factors, thermodynamics and statistical mechanics can be used to understand cellular physiology.|
-| 17 Jan. | **Equilibrium and Disequilibrium Continued.**|
+| 17 Jan. | **Equilibrium and Disequilibrium.**|
 || We will continue our discussion of equilibrium models in biology and emphasize the utility of flux and balance laws.|
-| 18 Jan. | **A vision for biology**|   
-| | Probability is the language of biology. We'll talk about who they are and how to use them. We'll wrap up the course with a celebration of quantitative biology by examining success stories.|
+| 18 Jan. | **Conservation, continuum, fluxes, dynamics & concluding thoughts on Physical Biology**|   
+| | We'll continue on the huge topic of how systems change over time. We'll wrap up the course with a celebration of quantitative biology by examining success stories.|
