comment out the datasets for now

--- a/_posts/2017-01-25-code.md
+++ b/_posts/2017-01-25-code.md
@@ -19,9 +19,11 @@ progresses, these materials will be posted below. **Note:** *In some browsers (F
 
 
 ## Data sets
-Please download the following data sets, unzip them, and place them in your `pboc/data` folder as described in [the setting up Python tutorial]({{ site.baseurl}}/code/t0a_setting_up_python.html).
 
-* [Images of a growing *E. coli* microcolony](http://www.rpdata.caltech.edu/courses/course_data/ecoli_growth.zip)
+Here we will post the datasets that we will be analyzing to connect our theoretical insights with experiments.
+<!-- Please download the following data sets, unzip them, and place them in your `pboc/data` folder as described in [the setting up Python tutorial]({{ site.baseurl}}/code/t0a_setting_up_python.html).
+
+* [Images of a growing *E. coli* microcolony](http://www.rpdata.caltech.edu/courses/course_data/ecoli_growth.zip) -->
 
 
 ## Python utilities
