add links to classes

--- a/_posts/2017-01-24-readings.md
+++ b/_posts/2017-01-24-readings.md
@@ -24,3 +24,11 @@ Readings mentioned specifically in class will be listed here as the course progr
 {% endif %}
 {% endfor %}
 
+
+## Useful links
+
+These are some useful links that can become handy as you explore deeper each of the topics discussed during the course.
+
+* [BE/APh 161 : Physical Biology of the Cell (Caltech)](http://beaph161.caltech.edu/2018/) | This website contains the material used for teaching a 10 week version of the same course. Here you will find useful problem sets to flex those quantitative biology muscles.
+
+* [Stat 110: Probability (Harvard)](https://projects.iq.harvard.edu/stat110/home) | This excellent course by Joe Blitzstein is a great resource to learn probability theory.
