--- a/_posts/2017-01-25-code.md
+++ b/_posts/2017-01-25-code.md
@@ -24,6 +24,8 @@ Please download the following data sets, unzip them, and place them in your `pbo
 
 * [Images of a growing *E. coli* microcolony](http://www.rpdata.caltech.edu/courses/course_data/ecoli_growth.zip)
 
+* [LacI titration images](http://rpdata.caltech.edu/courses/bi1_2017/data/lacI_titration.zip)
+
 
 ## Python utilities
 As sometimes syntax can be difficult, we have written a file with a few functions written in Python that will make some of the in-class exercises less cumbersome. Please download them below and place them in your root `pboc` folder.
