--- a/_posts/2017-01-24-readings.md
+++ b/_posts/2017-01-24-readings.md
@@ -29,6 +29,8 @@ Readings mentioned specifically in class will be listed here as the course progr
 
 These are some useful links that can become handy as you explore deeper each of the topics discussed during the course.
 
+* [Cell Biology by the numbers](book.bionumbers.org). This is the online version of “Cell Biology by the Numbers”, a resource that you will find helpful both for understanding the data that characterizes modern biology and for how to construct order-of-magnitude estimates to understand that data.
+
 * [BE/APh 161 : Physical Biology of the Cell (Caltech)](http://beaph161.caltech.edu/2018/).  This website contains the material used for teaching a 10 week version of the same course. Here you will find useful problem sets to flex those quantitative biology muscles.
 
 * [Stat 110: Probability (Harvard)](https://projects.iq.harvard.edu/stat110/home).  This excellent course by Joe Blitzstein is a great resource to learn probability theory.
