add link to example images for gene expression analysis

--- a/_posts/2017-01-25-code.md
+++ b/_posts/2017-01-25-code.md
@@ -24,6 +24,8 @@ Please download the following data sets, unzip them, and place them in your `pbo
 
 * [Images of a growing *E. coli* microcolony](http://www.rpdata.caltech.edu/courses/course_data/ecoli_growth.zip)
 
+* [Example images or *E coli* gene expression](http://www.rpgroup.caltech.edu/courses/bi1_2017/data/ecoli_images.zip)
+
 * [LacI titration images](http://rpdata.caltech.edu/courses/bi1_2017/data/lacI_titration.zip)
 
 
