add entries about colormaps

--- a/_posts/2017-01-25-code.md
+++ b/_posts/2017-01-25-code.md
@@ -53,3 +53,7 @@ Below is a list of useful online resources for learning the Python programming l
 * [Codecademy course on Python](https://www.codecademy.com/learn/python)
 
 * [DataCamp course on Python for data science](https://www.datacamp.com/courses/intro-to-python-for-data-science)
+
+* [How bad is your colormap](https://jakevdp.github.io/blog/2014/10/16/how-bad-is-your-colormap/). Interesting blog that discusses how the jet colormap is actually bad for displaying data.
+
+* [A better default colormap](https://www.youtube.com/watch?v=xAoljeRJ3lU). Talk at the Scipy 2015 meeting where they explain the caveats behind colormaps.
