--- a/_posts/2017-01-25-code.md
+++ b/_posts/2017-01-25-code.md
@@ -42,6 +42,8 @@ As we progress through the course, the code written in class will be posted here
 
 * **Tutorial 1** \| [Numerical Integration of Biological Growth]({{site.baseurl}}/code/t1a_numerical_integration.html)
 * **Tutorial 2** \| [Measuring Bacterial Growth Via Microscopy]({{site.baseurl}}/code/t1b_ecoli_growth.html)
+* **Tutorial 3** \| [Stochastic Simulations]({{site.baseurl}}/code/t03_stochastic_simulations.html)
+* **Tutorial 4** \| [Integrating the Master Equation]({{site.baseurl}}/code/t04_chemical_master_equations.html)
 
 ## External resources
 Below is a list of useful online resources for learning the Python programming language and principles of programming in general.
