add Allan Wilson video

--- a/_posts/2017-01-24-readings.md
+++ b/_posts/2017-01-24-readings.md
@@ -34,3 +34,5 @@ These are some useful links that can become handy as you explore deeper each of 
 * [BE/APh 161 : Physical Biology of the Cell (Caltech)](http://beaph161.caltech.edu/2018/).  This website contains the material used for teaching a 10 week version of the same course. Here you will find useful problem sets to flex those quantitative biology muscles.
 
 * [Stat 110: Probability (Harvard)](https://projects.iq.harvard.edu/stat110/home).  This excellent course by Joe Blitzstein is a great resource to learn probability theory.
+
+* [Video about dating humans and chimpanzees divergence](https://www.nzonscreen.com/title/allan-wilson-evolutionary-2008). This great video talks about how Allan Wilson used molecules to date the divergence between humans and chimpanzees.
